// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add a second product 1`] = `
Object {
  "cart": Array [
    Object {
      "actual_price": "R$ 199,90",
      "code_color": "20002605_613",
      "color": "TAPE�ARIA",
      "color_slug": "tapecaria",
      "discount_percentage": "",
      "image": "https://d3l7rqep7l31az.cloudfront.net/images/products/20002605_615_catalog_1.jpg?1460136912",
      "installments": "3x R$ 66,63",
      "name": "VESTIDO TRANSPASSE BOW",
      "on_sale": false,
      "regular_price": "R$ 199,90",
      "sizes": Array [
        Object {
          "available": false,
          "size": "PP",
          "sku": "5807_343_0_PP",
        },
        Object {
          "available": true,
          "size": "P",
          "sku": "5807_343_0_P",
        },
        Object {
          "available": true,
          "size": "M",
          "sku": "5807_343_0_M",
        },
        Object {
          "available": true,
          "size": "G",
          "sku": "5807_343_0_G",
        },
        Object {
          "available": false,
          "size": "GG",
          "sku": "5807_343_0_GG",
        },
      ],
      "style": "20002605",
    },
    Object {
      "actual_price": "R$ 99,90",
      "code_color": "20002570_614",
      "color": "PRETO",
      "color_slug": "preto",
      "discount_percentage": "",
      "image": "https://d3l7rqep7l31az.cloudfront.net/images/products/20002570_002_catalog_1.jpg?1459948578",
      "installments": "3x R$ 33,30",
      "name": "REGATA ALCINHA FOLK",
      "on_sale": false,
      "regular_price": "R$ 99,90",
      "sizes": Array [
        Object {
          "available": true,
          "size": "PP",
          "sku": "5723_40130843_0_PP",
        },
        Object {
          "available": true,
          "size": "P",
          "sku": "5723_40130843_0_P",
        },
        Object {
          "available": true,
          "size": "M",
          "sku": "5723_40130843_0_M",
        },
        Object {
          "available": true,
          "size": "G",
          "sku": "5723_40130843_0_G",
        },
        Object {
          "available": true,
          "size": "GG",
          "sku": "5723_40130843_0_GG",
        },
      ],
      "style": "20002570",
    },
  ],
}
`;

exports[`Adds new product 1`] = `
Object {
  "cart": Array [
    Object {
      "actual_price": "R$ 199,90",
      "code_color": "20002605_613",
      "color": "TAPE�ARIA",
      "color_slug": "tapecaria",
      "discount_percentage": "",
      "image": "https://d3l7rqep7l31az.cloudfront.net/images/products/20002605_615_catalog_1.jpg?1460136912",
      "installments": "3x R$ 66,63",
      "name": "VESTIDO TRANSPASSE BOW",
      "on_sale": false,
      "regular_price": "R$ 199,90",
      "sizes": Array [
        Object {
          "available": false,
          "size": "PP",
          "sku": "5807_343_0_PP",
        },
        Object {
          "available": true,
          "size": "P",
          "sku": "5807_343_0_P",
        },
        Object {
          "available": true,
          "size": "M",
          "sku": "5807_343_0_M",
        },
        Object {
          "available": true,
          "size": "G",
          "sku": "5807_343_0_G",
        },
        Object {
          "available": false,
          "size": "GG",
          "sku": "5807_343_0_GG",
        },
      ],
      "style": "20002605",
    },
  ],
}
`;

exports[`Delete a existing product 1`] = `
Object {
  "cart": Array [
    Object {
      "actual_price": "R$ 199,90",
      "code_color": "20002605_613",
      "color": "TAPE�ARIA",
      "color_slug": "tapecaria",
      "discount_percentage": "",
      "image": "https://d3l7rqep7l31az.cloudfront.net/images/products/20002605_615_catalog_1.jpg?1460136912",
      "installments": "3x R$ 66,63",
      "name": "VESTIDO TRANSPASSE BOW",
      "on_sale": false,
      "regular_price": "R$ 199,90",
      "sizes": Array [
        Object {
          "available": false,
          "size": "PP",
          "sku": "5807_343_0_PP",
        },
        Object {
          "available": true,
          "size": "P",
          "sku": "5807_343_0_P",
        },
        Object {
          "available": true,
          "size": "M",
          "sku": "5807_343_0_M",
        },
        Object {
          "available": true,
          "size": "G",
          "sku": "5807_343_0_G",
        },
        Object {
          "available": false,
          "size": "GG",
          "sku": "5807_343_0_GG",
        },
      ],
      "style": "20002605",
    },
  ],
}
`;

exports[`Delete a non existing product should return the same state 1`] = `
Object {
  "cart": Array [
    Object {
      "actual_price": "R$ 199,90",
      "code_color": "20002605_613",
      "color": "TAPE�ARIA",
      "color_slug": "tapecaria",
      "discount_percentage": "",
      "image": "https://d3l7rqep7l31az.cloudfront.net/images/products/20002605_615_catalog_1.jpg?1460136912",
      "installments": "3x R$ 66,63",
      "name": "VESTIDO TRANSPASSE BOW",
      "on_sale": false,
      "regular_price": "R$ 199,90",
      "sizes": Array [
        Object {
          "available": false,
          "size": "PP",
          "sku": "5807_343_0_PP",
        },
        Object {
          "available": true,
          "size": "P",
          "sku": "5807_343_0_P",
        },
        Object {
          "available": true,
          "size": "M",
          "sku": "5807_343_0_M",
        },
        Object {
          "available": true,
          "size": "G",
          "sku": "5807_343_0_G",
        },
        Object {
          "available": false,
          "size": "GG",
          "sku": "5807_343_0_GG",
        },
      ],
      "style": "20002605",
    },
    Object {
      "actual_price": "R$ 99,90",
      "code_color": "20002570_614",
      "color": "PRETO",
      "color_slug": "preto",
      "discount_percentage": "",
      "image": "https://d3l7rqep7l31az.cloudfront.net/images/products/20002570_002_catalog_1.jpg?1459948578",
      "installments": "3x R$ 33,30",
      "name": "REGATA ALCINHA FOLK",
      "on_sale": false,
      "regular_price": "R$ 99,90",
      "sizes": Array [
        Object {
          "available": true,
          "size": "PP",
          "sku": "5723_40130843_0_PP",
        },
        Object {
          "available": true,
          "size": "P",
          "sku": "5723_40130843_0_P",
        },
        Object {
          "available": true,
          "size": "M",
          "sku": "5723_40130843_0_M",
        },
        Object {
          "available": true,
          "size": "G",
          "sku": "5723_40130843_0_G",
        },
        Object {
          "available": true,
          "size": "GG",
          "sku": "5723_40130843_0_GG",
        },
      ],
      "style": "20002570",
    },
  ],
}
`;

exports[`Returns default state 1`] = `
Object {
  "cart": Array [],
}
`;
